Bug 156078 - In a DOCX, right-aligned number is not exported to PDF
Summary: In a DOCX, right-aligned number is not exported to PDF
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: filter:docx
Depends on:
Blocks: DOCX-compatibilityMode-15
  Show dependency treegraph
 
Reported: 2023-06-27 12:29 UTC by Mike Kaganski
Modified: 2023-09-11 18:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
A right-aligned tab stop outside of paragraph right indent (2.23 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-06-27 12:29 UTC, Mike Kaganski
Details
TabOverSpacing.odt: looks very different in DOCX format, especially in Word (17.31 KB, application/vnd.oasis.opendocument.text)
2023-06-28 14:21 UTC, Justin L
Details
TabOverSpacing_mso2010.pdf (3.75 KB, application/pdf)
2023-06-28 14:21 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-06-27 12:29:18 UTC
Created attachment 188106 [details]
A right-aligned tab stop outside of paragraph right indent

The attached minimal reproducer uses DOCX compat mode 15, and contains a single paragraph with right indent set to 12.7 mm, and its right-aligned tab stop is inside page margins, but outside of the paragraph right indent.

When exporting the document (to PDF, PNG, ...) or printing, the number after the tabulation is missing.
Comment 1 Commit Notification 2023-06-28 02:41:52 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dbfa56424f3d41bb58b7c9137f25f4ccb76dc92d

tdf#156078: also consider TabOverflow for tabs outside of line bounds

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Justin L 2023-06-28 14:21:15 UTC
Created attachment 188119 [details]
TabOverSpacing.odt: looks very different in DOCX format, especially in Word
Comment 3 Justin L 2023-06-28 14:21:42 UTC
Created attachment 188120 [details]
TabOverSpacing_mso2010.pdf
Comment 4 Commit Notification 2023-06-28 21:03:03 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e24a3a3c339d7a175ebfeef31a280becda9d5950

tdf#156078: Use TabOverSpacing compat option instead of TabOverflow

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-07-04 21:00:29 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/237a550af3b4ec1223decf451fb41dc74c229080

tdf#156078: also consider TabOverflow for tabs outside of line bounds

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-07-04 21:00:31 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/3e04f54f7efdc0f7373c248b9ba02e6fd5a43da2

tdf#156078: Use TabOverSpacing compat option instead of TabOverflow

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.