tdf#156078: also consider TabOverflow for tabs outside of line bounds

Before commit 29bd00f7628e7a54e69cabcc7e2a1792c24aa55c, TabOverMargin
compat option was set for DOCX with any compat mode. After that commit,
the unset option disallowed output of content after a tab stop outside
of the paragraph indents, even within page margins.

SwTabPortion::PreFormat consults TabOverflow when checking if position
is outside the frame; so let's consult it also when painting.

Change-Id: I05ada0da6cd765c70b7bad1287ccc8c11d9b60ba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153672
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit dbfa56424f3d41bb58b7c9137f25f4ccb76dc92d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153691
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>